adjusted the layout of the faq page, fixed the visibility of the footer copyright

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,17 +4,17 @@
 
 html{
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: auto;
 }
 
 body {
   background-color: #FFA600 !important;
-  width: auto;
   height: auto;
-  margin: 0;
+  width: auto;
   padding: 0;
   max-width: 100%;
-  min-width: 100%;
+  min-width: 1800px;
+  margin: 0 auto;
 }
 
 /* Navbar */
@@ -58,7 +58,7 @@ body {
 .footer-section {
   background-color: #0A0A0A;
   height: 200px;
-  width: 100vw;
+  width: 100%;
 }
 
 .footer-section img {
@@ -100,6 +100,7 @@ body {
 
 .copyright {
   font-size: 14px;
+  color: white;
 }
 
 /* Header */
@@ -327,14 +328,20 @@ body {
 }
 
 /* FAQ Page */
+.faq-view {
+  max-width: 75%;
+}
+
 .faq-group {
   display: flex;
   position: relative;
-  left: 25%;
+  left: 35%;
+  right: 35%;
 }
 
 .faq-header {
-  text-align: center;
+  position: absolute;
+  left: 38%;
   font-family: Poppins;
   font-style: normal;
   font-weight: bold;
@@ -424,7 +431,8 @@ body {
 }
 
 .cont-left {
-  text-align: left;
+  position: relative;
+  left: 18%;
 }
 
 .cont-right {
@@ -526,30 +534,11 @@ body {
   border: none !important;
 }
 
-.summary-finances-title tr td {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-.date-range {
-  background-color: #FFECCC !important;
-}
-
-.cancel-btn {
-  background-color: rgb(0, 102, 118) !important;
-  color: #ffffff !important;
-  padding: 10px 30px 10px 30px !important;
-}
-
-.drop-menu {
-  width: 100px !important;
-}
-
 /*edit pages*/
 .edit-title {
   position: relative;
   height: 45px;
-  left: 20%;
+  left: 28%;
   font-family: Poppins;
   font-style: normal;
   font-weight: bold;
@@ -561,7 +550,7 @@ body {
 .edit-category {
   position: relative;
   height: 45px;
-  left: 20%;
+  left: 28%;
   font-family: Poppins;
   font-style: italic;
   font-weight: bold;
@@ -574,7 +563,7 @@ body {
   position: relative;
   width: 1139px;
   height: 102px;
-  left: 20%;
+  left: 28%;
   background: #FEFEFE;
   border: 1px solid rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
@@ -585,7 +574,7 @@ body {
   position: relative;
   width: 1139px;
   height: 40px;
-  left: 20%;
+  left: 28%;
   background: #FEFEFE;
   border: 1px solid rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
@@ -596,7 +585,7 @@ body {
   position: relative;
   width: 1139px;
   height: 401px;
-  left: 20%;
+  left: 28%;
   background: #FEFEFE;
   border: 1px solid rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
@@ -608,7 +597,7 @@ body {
   position: relative;
   width: 193px;
   height: 39px;
-  left: 45%;
+  left: 60%;
 }
 
 .profile-form {
